[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["RayObi <raymondww90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
